--- a/info.html
+++ b/info.html
@@ -17,21 +17,21 @@
     <h2>Bike Parts Information & Price</h2>
 
     <div class="info">
-      <img src="c:\Users\yhaih\Downloads\mtb.jpg" alt="Bike Wheel">
+      <img src="mtb.jpg" alt="Bike Wheel">
       <h3>Mountain Bike Wheel</h3>
       <p>Durable alloy wheel for mountain bikes. Great for off-road adventures.</p>
       <p><strong>Price: 1,000php</strong></p>
     </div>
 
     <div class="info">
-      <img src="c:\Users\yhaih\Downloads\comfortableSaddle.jpg" alt="Bike Seat">
+      <img src="comfortableSaddle.jpg" alt="Bike Seat">
       <h3>Comfort Saddle</h3>
       <p>Soft, ergonomic saddle for long rides. Reduces pressure for maximum comfort.</p>
       <p><strong>Price: 500php</strong></p>
     </div>
 
     <div class="info">
-      <img src="c:\Users\yhaih\Downloads\pedals.jpg" alt="Bike Pedals">
+      <img src="pedals.jpg" alt="Bike Pedals">
       <h3>Aluminum Pedals</h3>
       <p>Lightweight and durable pedals with anti-slip grip for better control.</p>
       <p><strong>Price: 200php</strong></p>
