--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
     <h2>Our Bike Parts</h2>
     <div class="grid">
       <div class="card">
-        <img src="c:\Users\yhaih\Downloads\mtb.jpg" alt="Bike Wheel">
+        <img src="mtb.jpg" alt="Bike Wheel">
         <h3>Mountain Bike Wheel</h3>
       </div>
       <div class="card">
-        <img src="c:\Users\yhaih\Downloads\comfortableSaddle.jpg" alt="Bike Seat">
+        <img src="comfortableSaddle.jpg" alt="Bike Seat">
         <h3>Comfort Saddle</h3>
       </div>
       <div class="card">
-        <img src="c:\Users\yhaih\Downloads\pedals.jpg" alt="Bike Pedals">
+        <img src="pedals.jpg" alt="Bike Pedals">
         <h3>Aluminum Pedals</h3>
       </div>
     </div>
