--- a/order.html
+++ b/order.html
@@ -37,7 +37,7 @@
   </div>
 
   <footer>
-    <p>&copy; 2025 Bike Parts Shop. All rights reserved.</p>
+    <p>&copy; 2025 BikelowBike Store. All rights reserved.</p>
   </footer>
 
 </body>
